Updated styles and installed material ui

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 h1 {
   color: dodgerblue;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 /*# sourceMappingURL=styles.css.map */
